use toList() method